--- a/packages/zefyr/pubspec.yaml
+++ b/packages/zefyr/pubspec.yaml
@@ -12,8 +12,7 @@ dependencies:
     sdk: flutter
   collection: ^1.14.6
   url_launcher: ^5.0.0
-  quill_delta:
-    git: git@github.com:pulyaevskiy/quill-delta-dart.git
+  quill_delta: ^2.0.0
   notus:
     path: ../notus
   meta: ^1.1.0
